--- a/src/assets/scss/base/normalize.scss
+++ b/src/assets/scss/base/normalize.scss
@@ -27,7 +27,7 @@ html {
 body {
     margin: 0;
     font-size: $font-size;
-    background: $gray-lightest;
+    background: $gray-lighter;
 }
 
 // HTML5 display definitions
