--- a/src/assets/scss/mixin/close.scss
+++ b/src/assets/scss/mixin/close.scss
@@ -2,7 +2,7 @@
     float: right;
     font-size: $font-size * 1.5;
     line-height: 1;
-    color: $gray-lightest;
+    color: $gray-lighter;
     text-shadow: $gray;
     opacity: .2;
 }
