--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -3,26 +3,22 @@
  */
 
 $gray-dark:           #000 !default;
-$gray:                #3A3A3A !default;
-$gray-light:          #878787 !default;
-$gray-lighter:        #bfbfbf !default;
-$gray-lightest:       #F5f5f5 !default;
+$gray:                #515151 !default;
+$gray-light:          #8a8a8a !default;
+$gray-lighter:        #eee !default;
 
 /*
  *分割线
  */
-$line: #d8d8d8 !default;
+$line: #dcdcdc !default;
 
 /*
  *主要和次要颜色
  */
-$primary:             #65a032 !default;
-$secondary:           #ff7e05 !default;
+$primary:             #e9521a !default;
+$secondary:           #77b22a !default;
+$tertiary:            #f5b517 !default;
 
-/*
- *省心订主色
- */
-$cycle-color:		  #76A741 !default;
 
 /*
  *成功，信息，警告，危险对应色值
@@ -31,20 +27,6 @@ $success:             #5cb85c !default;
 $info:                #5bc0de !default;
 $warning:             #f0ad4e !default;
 $danger:              #ff4848 !default;
-
-/*
- *Spacing
- */
-/*
- *Control the default styling of most Bootstrap elements by modifying these
- */
-/*
- *variables. Mostly focused on spacing.
- */
-
-$spacer:                     .08rem !default;
-$spacer-x:                   $spacer !default;
-$spacer-y:                   $spacer !default;
 
 $link-hover:      underline !default;
 
@@ -68,34 +50,5 @@ $font-size-xs:               .1rem !default;
 $line-height-l:         2 !default;
 $line-height:                1.5 !default;
 $line-height-s:         1.2 !default;
-
-/*
- *Components
- */
-/*
- *Define common padding and border radius sizes and more line-height.
- */
-
-$border-radius-l:       .06rem !default;
-$border-radius:          .04rem !default;
-$border-radius-round:       50% !default;
-$border-radius-s:       .02rem !default;
-
-$border-color: #eee !default;
-$border-pos: top !default;
-
-/*
- *Forms
- */
-$cursor-pointer:  pointer !default;
-$cursor-disabled: not-allowed !default;
-
-
-/*
- *Z-index master list
- */
-
-$zindex:            500 !default;
-$zindex-tooltip:           1070 !default;
 
 
