--- a/src/assets/scss/base/normalize.scss
+++ b/src/assets/scss/base/normalize.scss
@@ -25,8 +25,9 @@ html {
 //
 
 body {
-    margin: 0;
+    margin: 0 auto;
     font-size: $font-size;
+    max-width: 7.5rem;
     background: $gray-lighter;
 }
 
